// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IonIcon match snapshot for alias icon 1`] = `
<div>
  <ion-icon
    data-testid="ionicon"
    src="/images/ionicons/analytics.svg"
  />
</div>
`;

exports[`IonIcon match snapshot for basic icon 1`] = `
<div>
  <ion-icon
    data-testid="ionicon"
    src="/images/ionicons/home.svg"
  />
</div>
`;

exports[`IonIcon match snapshot for custom icon 1`] = `
<div>
  <ion-icon
    data-testid="ionicon"
    src="/images/ionicons/custom/home2.svg"
  />
</div>
`;
